--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@
     display: flex;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(49,84,129,1)), color-stop(100%, rgba(39,107,130,1))); /* safari4+,chrome */
@@ -59,6 +59,10 @@
     padding: 0px 20px;
     margin: 20px;
     width: 230px;
+    margin : 0 auto;
+  }
+  .create-room{
+    width:50%;
   }
   
   .form-field {
@@ -85,7 +89,7 @@
   
   .chat__sidebar {
     overflow-y: scroll;
-    width: 260px;
+    width: 25%;
     height: 100vh;
     background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(49,84,129,1)), color-stop(100%, rgba(39,107,130,1))); /* safari4+,chrome */
