--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,11 +58,17 @@
     border-radius: 5px;
     padding: 0px 20px;
     margin: 20px;
-    width: 230px;
+    width: 35%;
     margin : 0 auto;
+    
   }
+  /* #join-form{
+    padding-top:30%
+  } */
   .create-room{
-    width:50%;
+    width:100%;
+    height:100%;
+    margin: 0 auto;
   }
   
   .form-field {
@@ -115,6 +121,7 @@
     border-radius: 5px;
     padding: 10px;
     margin: 10px;
+    border: 1px solid black;
   }
   
   .chat__main {
@@ -128,6 +135,9 @@
     flex-grow: 1;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+  }
+  #message-template{
+    background: white;
   }
   
   .chat__footer {
